# pyopenfigi

./: LICENSE  README.md  pyproject.toml
examples/: gilts.py  options.py  stocks.py
pyopenfigi/: __init__.py  exceptions.py  models.py  wrapper.py
tests/: test_wrapper.py
tests/cassettes/test_wrapper/: test_filter_instrument_not_found.yaml  test_filter_multi_api_call.yaml  test_filter_single_api_call.yaml  test_get_currencies.yaml  test_get_exchange_codes.yaml  test_get_id_types.yaml  test_get_market_security_descriptions.yaml  test_get_mic_codes.yaml  test_get_security_types.yaml  test_get_security_types_2.yaml  test_get_state_codes.yaml  test_get_total_number_of_matches.yaml  test_map_one_job.yaml  test_map_two_jobs.yaml  test_map_two_jobs_one_of_which_is_in_error.yaml  test_too_many_mapping_requests.yaml
tests/test_models/: test_mapping_job.py  test_nullable_date_interval.py  test_nullable_number_interval.py
