[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyopenfigi"
authors = [{ name = "tlouarn" }]
description = "Python wrapper for the OpenFIGI API"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["openfigi", "api", "bloomberg", "figi", "python"]
dependencies = ["requests", "pydantic>=1.10"]
version = "0.1.0"

[project.optional-dependencies]
dev = ["pytest", "pytest-recording"]

[project.urls]
Homepage = "https://github.com/tlouarn/pyopenfigi"

[tool.black]
line-length = 120